# myfirstpluginvita

./: CMakeLists.txt  README.md  createbuild.sh  log.c  main.c
